@@ -860,15 +860,10 @@ function resource_cache_out($type, $path) {
 
 						/* if the file type is PHP check syntax */
 						if ($extension == 'php') {
-							if ($config['cacti_server_os'] == 'win32') {
-								$tmpfile = '%TEMP%' . DIRECTORY_SEPARATOR . 'cachecheck.php';
-								$tmpdir  = '%TEMP%';
-							} else {
-								$tmpfile = '/tmp/cachecheck.php';
-								$tmpdir  = '/tmp';
-							}
+							$tmpdir = sys_get_temp_dir();
+							$tmpfile = tempnam($tmpdir,'ccp').'.php';
 
-							if ((is_writeable($tmpdir) && !file_exists($tmpfile)) || (file_exists($tmpfile) && !is_writable($tmpfile))) {
+							if ((is_writeable($tmpdir) && !file_exists($tmpfile)) || (file_exists($tmpfile) && is_writable($tmpfile))) {
 								if (file_put_contents($tmpfile, $contents) !== false) {
 									$output = system($php_path . ' -l ' . $tmpfile, $exit);
 									if ($exit == 0) {
@@ -879,10 +874,15 @@ function resource_cache_out($type, $path) {
 											cacti_log("ERROR: Cache in cannot write to '" . $mypath . "', purge this location");
 										}
 									} else {
-										cacti_log("ERROR: PHP Source File '" . $mypath . "' from Cache has a Syntax error!", false, 'POLLER');
+										cacti_log("ERROR: PHP Source File '" . $mypath . "' from Cache has an error whilst checking syntax ($exit)!", false, 'POLLER');
+										cacti_log("ERROR: PHP Source File '" . $mypath . "' tried to execute: $php_path -l $tmpfile", false, 'POLLER');
+										$lines = explode("\n",$output);
+										foreach ($lines as $line) {
+											cacti_log("ERROR: PHP Source File '" . $mypath . "': $line!", false, 'POLLER');
+										}
 									}
 
-									unlink($tmpfile);
+									//unlink($tmpfile);
 								} else {
 									cacti_log("ERROR: Unable to write file '" . $tmpfile . "' for PHP Syntax verification", false, 'POLLER');
 								}
